Fix layout shifts

--- a/.vitepress/theme/style/style.scss
+++ b/.vitepress/theme/style/style.scss
@@ -44,6 +44,9 @@ html {
         }
     }
 
+    // Prevent layout-shifts
+    scrollbar-gutter: stable both-edges;
+
     body {
         background-color: var(--bgColor-default);
 
